<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            >

            <ImageView
                android:id="@+id/detailImg"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                />

            <TextView
                android:id="@+id/detailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/detail_name"
                app:layout_constraintTop_toBottomOf="@id/detailImg"
                app:layout_constraintStart_toStartOf="@id/detailImg"
                app:layout_constraintEnd_toEndOf="@id/detailImg"
                />
            <TextView
                android:id="@+id/detailPenyelenggara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailTitle"
                android:text="@string/penyelenggara"
                />
            <TextView
                android:id="@+id/detailWaktu"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/detailPenyelenggara"
                app:layout_constraintTop_toBottomOf="@+id/detailPenyelenggara"
                android:text="@string/waktu_acara"
                />

            <TextView
                android:id="@+id/detailQuota"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/detailPenyelenggara"
                app:layout_constraintTop_toBottomOf="@+id/detailWaktu"
                android:text="@string/quota"
                />

            <TextView
                android:id="@+id/detailDeskripsi"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/detailPenyelenggara"
                app:layout_constraintTop_toBottomOf="@+id/detailQuota"
                android:text="@string/deskripsi"
                />

            <TextView
                android:id="@+id/detailIsiDeskripsi"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/detailPenyelenggara"
                app:layout_constraintTop_toBottomOf="@+id/detailDeskripsi"
                android:text="@string/isi_deskripsi" />

            <Button
                android:id="@+id/detailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailIsiDeskripsi"
                />
            <ProgressBar
                android:id="@+id/detailProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</LinearLayout>